--- a/main.html
+++ b/main.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<marquee>Welcome to Acciojobs!</marquee>
+	<a href="https://acciojob.com/blog/">Blog</a>
     <script type="text/javascript" src="./script.js">
 </script>
 
