--- a/main.html
+++ b/main.html
@@ -9,6 +9,11 @@
 <body>
 	<marquee>Welcome to Acciojobs!</marquee>
 	<a href="https://acciojob.com/blog/">Blog</a>
+	<div>
+		<img src="" style="length:200px;width:200px">
+		<a href=""></a>
+		<p></p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
